--- a/FleetManager/src/app/app.component.html
+++ b/FleetManager/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-home></app-home>
 <app-login></app-login>
-<app-lista_veiculos></app-lista_veiculos>
-<app-reserva_veiculos></app-reserva_veiculos>
+<app-lista-veiculos></app-lista-veiculos>
+<app-reserva-veiculos></app-reserva-veiculos>
