Implementando Login - Pendente conexão BD

--- a/FleetManager/src/app/app.component.html
+++ b/FleetManager/src/app/app.component.html
@@ -1,4 +1,5 @@
-<app-home></app-home>
+<!--<app-home></app-home>
 <app-login></app-login>
 <app-lista-veiculos></app-lista-veiculos>
-<app-reserva-veiculos></app-reserva-veiculos>
+<app-reserva-veiculos></app-reserva-veiculos>!-->
+<router-outlet></router-outlet>
