--- a/FleetManager/src/app/login/login.component.html
+++ b/FleetManager/src/app/login/login.component.html
@@ -1,1 +1,17 @@
-<p>login works!</p>
+<div class="container">
+    <div class="login">
+        <h1>login funfa</h1>
+        <h2>está centralizado</h2>
+        <form [formGroup]="loginForm">
+            <div class="id">
+                <input type="text" id="typeLogin" formControlName="email">
+                <label for="typeLogin">Login</label>
+            </div>
+            <div class="pass">
+                <input type="number" id="typePass" formControlName="password">
+                <label for="typePass">Senha</label>
+            </div>
+            <button (click)="login()">Entrar</button>
+        </form>
+    </div>
+  </div>
