Implementação Tela de Veículos

--- a/FleetManager/src/app/app.component.html
+++ b/FleetManager/src/app/app.component.html
@@ -3,3 +3,4 @@
 <app-lista-veiculos></app-lista-veiculos>
 <app-reserva-veiculos></app-reserva-veiculos>!-->
 <router-outlet></router-outlet>
+<app-lista-veiculos></app-lista-veiculos>
