--- a/FleetManager/src/app/lista-veiculos/lista-veiculos.component.html
+++ b/FleetManager/src/app/lista-veiculos/lista-veiculos.component.html
@@ -17,7 +17,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let veiculo of veiculos; let i = index">
+        <tr *ngFor="let veiculo of veiculosDoDia; let i = index">
           <td>
             <input
               type="checkbox"
