Implementando sistema de rotas

--- a/FleetManager/src/app/lista-veiculos/lista-veiculos.component.html
+++ b/FleetManager/src/app/lista-veiculos/lista-veiculos.component.html
@@ -1,3 +1,8 @@
+<header>
+  <a routerLink="/app">Home</a>
+  <a routerLink="/lista">Lista</a>
+  <a routerLink="/reserva">Reserva</a>
+</header>
 <div class="container">
     <div class="navegacao">
       <button (click)="alterarData(-1)">◀</button>
