--- a/FleetManager/src/app/home/home.component.html
+++ b/FleetManager/src/app/home/home.component.html
@@ -1,16 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
 <body>
-    <header></header>
+    <header>
+        <a routerLink="/app">Home</a>
+        <a routerLink="/lista">Lista</a>
+        <a routerLink="/reserva">Reserva</a>
+    </header>
     <main>
-        <div class="parent">
-            <div class="div5">5</div>
+        <div>
+            <p>home page</p>
         </div>
+        <router-outlet></router-outlet>
     </main>
 </body>
-</html>
