--- a/FleetManager/src/app/login/login.component.css
+++ b/FleetManager/src/app/login/login.component.css
@@ -1,13 +1,15 @@
-/*.container {  display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    gap: 0px 0px;
-    grid-auto-flow: row;
-    grid-template-areas:
-      ". . ."
-      ". login ."
-      ". . .";
-  }
-  
-  .login { grid-area: login; }*/
-  
+.loginsys{
+  border: 2px solid;
+  border-radius: 8%;
+  box-shadow: inset;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px;
+}
+
+h1{
+  text-align: center;
+  justify-content: center; 
+}
