--- a/FleetManager/src/app/lista-veiculos/lista-veiculos.component.css
+++ b/FleetManager/src/app/lista-veiculos/lista-veiculos.component.css
@@ -110,4 +110,22 @@
     color: white;
   }
   
+
+    /* Cabeçalho */
+    header {
+      background-color: #000;
+      padding: 15px 30px;
+      display: flex;
+      gap: 30px;
+    }
+    
+    header a {
+      color: white;
+      text-decoration: none;
+      font-size: 18px;
+    }
+    
+    header a:hover {
+      text-decoration: underline;
+    }
   
