Validação e correção dos itens relacionado ao tipo de uso

--- a/FleetManager/src/app/lista-veiculos/lista-veiculos.component.html
+++ b/FleetManager/src/app/lista-veiculos/lista-veiculos.component.html
@@ -58,6 +58,6 @@
     <div class="modal-buttons">
       <button (click)="confirmarReserva()">Confirmar</button>
       <button class="cancelar" (click)="fecharModal()">Cancelar</button>
-    </div>
+    </div> <!-- Colocar botão para retornar ao dia atual (facilitar navegação)-->
   </div>
 </div>
