--- a/FleetManager/src/app/lista-veiculos/lista-veiculos.component.html
+++ b/FleetManager/src/app/lista-veiculos/lista-veiculos.component.html
@@ -46,7 +46,7 @@
   </section>
 
   <div class="botoes-acao">
-    <button routerLink="/reserva" class="reserva">Reserva</button>
+    <button class="reserva" (click)="listaReserva()">Reservar</button>
   </div>
 
   <!-- Modal de Agendamento -->
