--- a/FleetManager/src/app/home/home.component.html
+++ b/FleetManager/src/app/home/home.component.html
@@ -24,7 +24,7 @@
         <h3>📝 Reservas</h3>
         <p>Realize ou consulte reservas de veículos rapidamente.</p>
       </div>
-      <div class="feature-card" routerLink="/usuarios">
+      <div class="feature-card" routerLink="/dashboard">
         <h3>👤 Relatórios</h3>
         <p>Gerencie e vizualize seus relatórios</p>
       </div>
