--- a/FleetManager/src/app/lista-veiculos/lista-veiculos.component.html
+++ b/FleetManager/src/app/lista-veiculos/lista-veiculos.component.html
@@ -3,6 +3,7 @@
     <a routerLink="/app">Home</a>
     <a routerLink="/lista">Lista</a>
     <a routerLink="/reserva">Reserva</a>
+    <a routerLink="/dashboard">Dashboard</a>
   </nav>
 </header>
 
