--- a/FleetManager/src/app/reserva-veiculos/reserva-veiculos.component.html
+++ b/FleetManager/src/app/reserva-veiculos/reserva-veiculos.component.html
@@ -2,6 +2,7 @@
     <a routerLink="/app">Home</a>
     <a routerLink="/lista">Lista</a>
     <a routerLink="/reserva">Reserva</a>
+    <a routerLink="/dashboard">Dashboard</a>
 </header>
 <h2>Fazer Reserva</h2>
 <form (ngSubmit)="fazerReserva()">
