--- a/FleetManager/src/app/lista-veiculos/lista-veiculos.component.css
+++ b/FleetManager/src/app/lista-veiculos/lista-veiculos.component.css
@@ -2,6 +2,7 @@
 header.header {
   background-color: #000;
   padding: 15px 30px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .nav-links {
